# yarm

./: .gitignore  Cargo.toml  LICENSE  Makefile  README.md  install.sh
.github/workflows/: release.yml
Formula/: yarm.rb
agent/: com.maxbridgland.yarm.plist
cli/: Cargo.toml
cli/src/: borders.rs  config.rs  launchagent.rs  main.rs  notify.rs  system.rs  targets.rs
docs/: tap-setup.md
dylib/: Makefile  yarm_inject.m  yarm_interpose.c  yarm_log.h  yarm_swizzle.m
