[package]
name = "yarm"
version = "0.1.0"
edition = "2021"
description = "Yet Another Radius Manager — uniform window corner radius for macOS Tahoe"
license = "MIT"

[[bin]]
name = "yarm"
path = "src/main.rs"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
toml = "0.8"
anyhow = "1"
libc = "0.2"

[target.'cfg(target_os = "macos")'.dependencies]
core-foundation = "0.10"
core-foundation-sys = "0.8"
